Add permissions to navigation system